--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "heroku-cli": "^7.0.9",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.9",
     "node-xlsx": "^0.17.2",
