--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "npm run build && node ./dist/app.js",
     "dev": "nodemon src/app.js --exec ./node_modules/.bin/babel-node src/app.js",
-    "build": "del -f dist && babel ./src -d dist",
+    "build": "npx rimraf -f dist && babel ./src -d dist",
     "lint": "eslint src/"
   },
   "keywords": [],
