--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "engines": {
     "node": "16.10.0"
   },
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "start": "npm run build && node ./dist/app.js",
     "dev": "nodemon src/app.js --exec ./node_modules/.bin/babel-node src/app.js",
