--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "scripts": {
     "start": "npm run build && node ./dist/app.js",
     "dev": "nodemon src/app.js --exec ./node_modules/.bin/babel-node src/app.js",
-    "build": "npx rimraf -f dist && babel ./src -d dist",
+    "build": "npx rimraf -f dist && babel ./src -d dist --copy-files",
     "lint": "eslint src/"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "core-js": "^3.18.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "heroku-cli": "^7.0.9",
@@ -28,7 +29,9 @@
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.15.5",
     "@babel/node": "^7.15.4",
+    "@babel/plugin-transform-runtime": "^7.15.8",
     "@babel/preset-env": "^7.15.6",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "regenerator-runtime": "^0.13.9"
   }
 }
